# stratum

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
assets/: points.laz
include/: Camera.h  DataLoader.h  Renderer.h  Shader.h  Window.h
include/glad/: glad.h
scripts/: laz_file_convertor.py
scripts/laz_conversion_logs/: log_2.txt
scripts/logs/: log_1.txt
src/: Camera.cpp  DataLoader.cpp  Renderer.cpp  Shader.cpp  Window.cpp  glad.c  main.cpp
src/shaders/: terrain.frag  terrain.vert
